--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   </head>
 
   <!-- Header -->
-  <body>    
+  <body> 
+
     <header class="page-header">
       <div class="header-container container">
       <nav class="page-nav">
@@ -112,7 +113,7 @@
             <img src="./images/mark.jpg" alt="Mark-Guerrero" width="264">
             <div class="name-role">
               <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-discr">Product Designer</p>
+              <p class="team-discr">Product Designer</p>                            
             </div>
           </li>
           <li class="team-cards card-set-items">
@@ -139,6 +140,47 @@
         </ul>
         </div>
       </section>
+      <!-- Customers -->
+      <section class="section">
+        <div class="container">
+        <h2 class="work-title">Customers</h2>
+        <ul class="list">
+          <ul>
+            <li>
+              <a href="">
+                <svg>
+                  <use></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <svg>
+                  <use></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <svg>
+                  <use></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <svg>
+                  <use></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+
+          
+        </ul>
+        </div>
+
+      </section>
     </main>
     
     <footer class="footer">
@@ -149,6 +191,39 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p> 
+      <div class="footer-social">
+      <h3 class="footer-name">Social media</h3>
+      <ul class="social-list list">
+        <li>
+          <a href="#" class="social-link-item-link social-link-item-link-instagram">
+            <svg class="social-list-icon-footer" width="40" height="40">
+              <use href="../goit-markup-hw-04/images/icons.svg/sprite-social-icons/symbol-defs.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-link-item-link social-link-item-link-twitter">
+            <svg class="social-list-icon-footer" width="40" height="40">
+              <use href="../goit-markup-hw-04/images/icons.svg/sprite-social-icons/symbol-defs.svg#twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-link-item-link social-link-item-link-facebook">
+            <svg class="social-list-icon-footer" width="40" height="40">
+              <use href="../goit-markup-hw-04/images/icons.svg/sprite-social-icons/symbol-defs.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-link-item-link social-link-item-link-linkedin">
+            <svg class="social-list-icon-footer" width="40" height="40">
+              <use href="../goit-markup-hw-04/images/icons.svg/sprite-social-icons/symbol-defs.svg#linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
     </div>
    
     </footer>
