--- a/index.html
+++ b/index.html
@@ -370,28 +370,28 @@
       <p class="footer-name">Social media</p>
       <ul class="social-list list">
         <li class="social-list-li">
-          <a href="#" class="social-link-item-link social-link-item-link-instagram">
+          <a class="social-link-item-link social-link-item-link-instagram" href="#">
             <svg class="social-list-icon-footer" width="24" height="24">
               <use href="./images/icons.svg/social-icons-symbol-defs.svg#instagram"></use>
             </svg>
           </a>
         </li>
         <li class="social-list-li">
-          <a href="#" class="social-link-item-link social-link-item-link-twitter">
+          <a class="social-link-item-link social-link-item-link-twitter" href="#">
             <svg class="social-list-icon-footer" width="24" height="24">
               <use href="./images/icons.svg/social-icons-symbol-defs.svg#twitter"></use>
             </svg>
           </a>
         </li>
         <li class="social-list-li">
-          <a href="#" class="social-link-item-link social-link-item-link-facebook">
+          <a class="social-link-item-link social-link-item-link-facebook" href="#">
             <svg class="social-list-icon-footer" width="24" height="24">
               <use href="./images/icons.svg/social-icons-symbol-defs.svg#facebook"></use>
             </svg>
           </a>
         </li>
         <li class="social-list-li">
-          <a href="#" class="social-link-item-link social-link-item-link-linkedin">
+          <a class="social-link-item-link social-link-item-link-linkedin" href="#">
             <svg class="social-list-icon-footer" width="24" height="24">
               <use href="./images/icons.svg/social-icons-symbol-defs.svg#linkedin"></use>
             </svg>
