--- a/index.html
+++ b/index.html
@@ -149,28 +149,28 @@
             <li class="team-cards-social-list-li">
             <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#instagram"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#instagram"></use>
             </svg>
           </a>
         </li>
         <li class="team-cards-social-list-li">
-          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
+          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-twitter">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#twitter"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#twitter"></use>
             </svg>
           </a>
         </li>
         <li class="team-cards-social-list-li">
-          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
+          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-facebook">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#facebook"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#facebook"></use>
             </svg>
           </a>
         </li>
         <li class="team-cards-social-list-li">
-          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
+          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-linkedin">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#linkedin"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#linkedin"></use>
             </svg>
           </a>
           </li>
@@ -191,28 +191,28 @@
         <li class="team-cards-social-list-li">
           <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#instagram"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#instagram"></use>
             </svg>
           </a>
         </li>
         <li class="team-cards-social-list-li">
-          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
+          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-twitter">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#twitter"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#twitter"></use>
             </svg>
           </a>
         </li>
         <li class="team-cards-social-list-li">
-          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
+          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-facebook">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#facebook"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#facebook"></use>
             </svg>
           </a>
         </li>
         <li class="team-cards-social-list-li">
-          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
+          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-linkedin">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#linkedin"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#linkedin"></use>
             </svg>
           </a>
           </li>
@@ -233,28 +233,28 @@
             <li class="team-cards-social-list-li">
             <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#instagram"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#instagram"></use>
             </svg>
           </a>
         </li>
         <li class="team-cards-social-list-li">
-          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
+          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-twitter">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#twitter"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#twitter"></use>
             </svg>
           </a>
         </li>
         <li class="team-cards-social-list-li">
-          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
+          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-facebook">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#facebook"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#facebook"></use>
             </svg>
           </a>
         </li>
         <li class="team-cards-social-list-li">
-          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
+          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-linkedin">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#linkedin"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#linkedin"></use>
             </svg>
           </a>
           </li>
@@ -275,28 +275,28 @@
         <li class="team-cards-social-list-li">
           <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#instagram"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#instagram"></use>
             </svg>
           </a>
         </li>
         <li class="team-cards-social-list-li">
-          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
+          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-twitter">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#twitter"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#twitter"></use>
             </svg>
           </a>
         </li>
         <li class="team-cards-social-list-li">
-          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
+          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-facebook">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#facebook"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#facebook"></use>
             </svg>
           </a>
         </li>
         <li class="team-cards-social-list-li">
-          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-instagram">
+          <a href="#" class="team-cards-social-link-item-link team-cards-social-link-item-link-linkedin">
             <svg class="social-list-icon-footer" width="16" height="16">
-              <use href=".//images/icons.svg/social-icons-symbol-defs.svg#linkedin"></use>
+              <use href=".//images/social-icons-symbol-defs.svg#linkedin"></use>
             </svg>
           </a>
           </li>          
@@ -316,42 +316,42 @@
             <li class="customers-list-item">
               <a class="customers" href="">
                 <svg class="customers-icons" width="104" height="56">
-                  <use href="./images/icons.svg/logo-icons-symbol-defs.svg#icon-Logo"></use>
+                  <use href="./images/logo-icons-symbol-defs.svg#icon-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers" href="">
                 <svg class="customers-icons" width="104" height="56">
-                  <use href="./images/icons.svg/logo-icons-symbol-defs.svg#icon-Logo-1"></use>
+                  <use href="./images/logo-icons-symbol-defs.svg#icon-logo-one"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers" href="">
                 <svg class="customers-icons" width="104" height="56">
-                  <use href="./images/icons.svg/logo-icons-symbol-defs.svg#icon-Logo-2"></use>
+                  <use href="./images/logo-icons-symbol-defs.svg#icon-logo-two"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers" href="">
                 <svg class="customers-icons" width="104" height="56">
-                  <use href="./images/icons.svg/logo-icons-symbol-defs.svg#icon-Logo-3"></use>
+                  <use href="./images/logo-icons-symbol-defs.svg#icon-logo-three"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers" href="">
                 <svg class="customers-icons" width="104" height="56">
-                  <use href="./images/icons.svg/logo-icons-symbol-defs.svg#icon-Logo-4"></use>
+                  <use href="./images/logo-icons-symbol-defs.svg#icon-logo-four"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers" href="">
                 <svg class="customers-icons" width="104" height="56">
-                  <use href="./images/icons.svg/logo-icons-symbol-defs.svg#icon-Logo-5"></use>
+                  <use href="./images/logo-icons-symbol-defs.svg#icon-logo-five"></use>
                 </svg>
               </a>
             </li>
@@ -377,28 +377,28 @@
         <li class="social-list-li">
           <a class="social-link-item-link social-link-item-link-instagram" href="#">
             <svg class="social-list-icon-footer" width="24" height="24">
-              <use href="./images/icons.svg/social-icons-symbol-defs.svg#instagram"></use>
+              <use href="./images/social-icons-symbol-defs.svg#instagram"></use>
             </svg>
           </a>
         </li>
         <li class="social-list-li">
           <a class="social-link-item-link social-link-item-link-twitter" href="#">
             <svg class="social-list-icon-footer" width="24" height="24">
-              <use href="./images/icons.svg/social-icons-symbol-defs.svg#twitter"></use>
+              <use href="./images/social-icons-symbol-defs.svg#twitter"></use>
             </svg>
           </a>
         </li>
         <li class="social-list-li">
           <a class="social-link-item-link social-link-item-link-facebook" href="#">
             <svg class="social-list-icon-footer" width="24" height="24">
-              <use href="./images/icons.svg/social-icons-symbol-defs.svg#facebook"></use>
+              <use href="./images/social-icons-symbol-defs.svg#facebook"></use>
             </svg>
           </a>
         </li>
         <li class="social-list-li">
           <a class="social-link-item-link social-link-item-link-linkedin" href="#">
             <svg class="social-list-icon-footer" width="24" height="24">
-              <use href="./images/icons.svg/social-icons-symbol-defs.svg#linkedin"></use>
+              <use href="./images/social-icons-symbol-defs.svg#linkedin"></use>
             </svg>
           </a>
         </li>
