--- a/portfolio.html
+++ b/portfolio.html
@@ -153,13 +153,50 @@
     </section>
     </main>    
      <footer class="footer">
-      <div class="container">      
+      
+      <div class="container footer-items"> 
+        <div class="footer-logo-descr">     
       <a class="link logo-footer footer-box" href="./index.html">Web<span class="logo-part-dark">Studio</span></a>
       <p class="footer-descr">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p> 
+      </div>
+      <div class="footer-social">
+      <p class="footer-name">Social media</p>
+      <ul class="social-list list">
+        <li class="social-list-li">
+          <a class="social-link-item-link social-link-item-link-instagram" href="#">
+            <svg class="social-list-icon-footer" width="24" height="24">
+              <use href="./images/social-icons-symbol-defs.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-list-li">
+          <a class="social-link-item-link social-link-item-link-twitter" href="#">
+            <svg class="social-list-icon-footer" width="24" height="24">
+              <use href="./images/social-icons-symbol-defs.svg#twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-list-li">
+          <a class="social-link-item-link social-link-item-link-facebook" href="#">
+            <svg class="social-list-icon-footer" width="24" height="24">
+              <use href="./images/social-icons-symbol-defs.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-list-li">
+          <a class="social-link-item-link social-link-item-link-linkedin" href="#">
+            <svg class="social-list-icon-footer" width="24" height="24">
+              <use href="./images/social-icons-symbol-defs.svg#linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
+    </div>
+   
     </footer>
     
 </body>
