--- a/index.html
+++ b/index.html
@@ -141,28 +141,28 @@
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -178,28 +178,28 @@
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -218,28 +218,28 @@
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -255,28 +255,28 @@
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-icon-items">
                   <a class="team-icon-link" href="">
                     <svg class="team-icon-link-svg" width="16" height="16">
-                      <use href="./images/social-icons-symbol-defs.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -295,42 +295,42 @@
             <li class="customers-list-item">
               <a class="customers" href="">
                 <svg class="customers-icons" width="104" height="56">
-                  <use href="./images/logo-icons.svg#icon-logo"></use>
+                  <use href="./images/icons.svg#icon-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers" href="">
                 <svg class="customers-icons" width="104" height="56">
-                  <use href="./images/logo-icons.svg#icon-logo-one"></use>
+                  <use href="./images/icons.svg#icon-logo-one"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers" href="">
                 <svg class="customers-icons" width="104" height="56">
-                  <use href="./images/logo-icons.svg#icon-logo-two"></use>
+                  <use href="./images/icons.svg#icon-logo-two"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers" href="">
                 <svg class="customers-icons" width="104" height="56">
-                  <use href="./images/logo-icons.svg#icon-logo-three"></use>
+                  <use href="./images/icons.svg#icon-logo-three"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers" href="">
                 <svg class="customers-icons" width="104" height="56">
-                  <use href="./images/logo-icons.svg#icon-logo-four"></use>
+                  <use href="./images/icons.svg#icon-logo-four"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers" href="">
                 <svg class="customers-icons" width="104" height="56">
-                  <use href="./images/logo-icons.svg#icon-logo-five"></use>
+                  <use href="./images/icons.svg#icon-logo-five"></use>
                 </svg>
               </a>
             </li>
@@ -353,28 +353,28 @@
           <li class="footer-items">
             <a class="social-icons" href="">
               <svg class="icons" width="24" height="24">
-                <use href="./images/social-icons-symbol-defs.svg#instagram"></use>
+                <use href="./images/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-items">
             <a class="social-icons" href="">
               <svg class="icons" width="24" height="24">
-                <use href="./images/social-icons-symbol-defs.svg#twitter"></use>
+                <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
           </li>
           <li class="footer-items">
             <a class="social-icons" href="">
               <svg class="icons" width="24" height="24">
-                <use href="./images/social-icons-symbol-defs.svg#facebook"></use>
+                <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-items">
             <a class="social-icons" href="">
               <svg class="icons" width="24" height="24">
-                <use href="./images/social-icons-symbol-defs.svg#linkedin"></use>
+                <use href="./images/icons.svg#linkedin"></use>
               </svg>
             </a>
           </li>
